--- a/block-BJaaiq/code/style.css
+++ b/block-BJaaiq/code/style.css
@@ -7,13 +7,15 @@ body {
   font-family: "Merienda", cursive;
   background-color: aqua;
 }
+
 h1 {
   text-align: center;
   font-size: 3rem;
+  margin: 3rem auto;
 }
 
-main {
-  margin: 2rem auto;
+ul {
+  margin: auto;
   max-width: 1000px;
   width: 100%;
 }
