--- a/block-BJaair/code/style.css
+++ b/block-BJaair/code/style.css
@@ -1,7 +1,144 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+/* Custom Styles */
+
 html {
   font-size: 16px;
 }
 body {
   font-size: 1.125rem;
   font-family: "Nunito", sans-serif;
+  background-color: rgb(243,214,170) ;
+}
+
+header{
+    background-color: black;
+}
+
+h1{
+    font-size: 2.5rem;
+    font-weight: 700;
+    text-align: center;
+    color:#fff;
+    padding: 1rem
+}
+
+main{
+     height: 90vh;
+     position: relative;
+}
+
+
+.flex{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+ul{
+    max-width: 1200px;
+    width: 100%;
+    margin:0 auto;
+    padding-left: 1rem;
+    padding-bottom: 2rem;
+
+}
+
+li{
+    display: inline-block;
+    margin-right: 1rem;
+    margin-top: 1rem;
+    background-color: rgb(238,81,61);
+    border: 1px solid rgb(78, 72, 72);
+    padding: 2rem;
+    flex: 0 1 24%;
+}
+
+.addCard{
+ position: absolute;
+ bottom:0;
+ left:0;
+ right: 0;
+}
+
+
+form{
+    padding: 1rem;
+    background-color: whitesmoke;
+    width: 20%;
+    margin: 0 auto;
+    border: 3px solid darkgray;
+}
+
+input{
+    width: 98%;
+    height: 2rem;
+    margin: 0 auto;
+    margin-bottom:1rem;
+}
+button{
+    width: 100%;
+    height: 2.2rem;
+    background-color: black;
+    color: white;
+    margin: 0 auto;
+}
+
+p{
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+    color: rgb(29, 28, 28);
+}
+
+h2{
+    font-size: 2rem;
 }
